# instant-zipper

./: README  instant-zipper.cabal
doc/paper/: instant-zipper.bib
doc/slides/: build  instant-zipper.fmt  instant-zipper.lhs
docs/paper/: build  instant-zipper.bib  instant-zipper.lhs  instant-zipper.tex
docs/slides/: instant-zipper.lhs
examples/: Dept.hs  Term.hs
src/Generics/Instant/: Tests.hs  TestsSSHetero.hs  Zipper.hs  Zipper2.hs  ZipperSSHetero.hs  Zipper_Ctxs.hs
src/Generics/Instant/Zipper/: Example.hs  TH.hs
src/Generics/Instant/Zipper/Example/: Dept.hs  Term.hs
src/Generics/Instant/Zipper/Test/: Dept.hs  Term.hs
