name:                instant-zipper
version:             0.0.0
synopsis:            Super cool mega lambdas
description:         My super cool, indeed, even mega lambdas 
                     will demonstrate a basic project. You will marvel.
license:             GPL
author:              Bram Schuur, Ruud Koot
maintainer:          Yow
build-depends:       base, instant-generics, template-haskell, mtl

build-type:         Simple
hs-source-dirs : src
exposed-modules :    Generics.Instant.Zipper


